--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,3 +4,4 @@ pages:
 - Getting started: index.md
 - Tutorial: tutorial.md
 - JSX transpilation and ES6 features: jsx.md
+- React in Blaze: react-in-blaze.md
