--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,4 +5,5 @@ pages:
 - Tutorial: tutorial.md
 - JSX transpilation and ES6 features: jsx.md
 - Using reactive Meteor data in React: meteor-data.md
+- Using client-side packages from NPM with Browserify: client-npm.md
 - React in Blaze: react-in-blaze.md
