--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,4 +5,4 @@ pages:
 - Tutorial: tutorial.md
 - JSX transpilation and ES6 features: jsx.md
 - Reactive Meteor data in React: meteor-data.md
-- React components inside Meteor templates: react-in-blaze.md
+- React components inside Meteor templates: react-template-helper.md
