Add back browserify page pending PR

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,4 +5,5 @@ pages:
 - Tutorial: tutorial.md
 - Reactive Meteor data in React: meteor-data.md
 - JSX transpilation and ES6 features: jsx.md
+- Using NPM packages with Browserify: client-npm.md
 - React components inside Meteor templates: react-template-helper.md
