Make the app break so I can fix it later

--- a/examples/material-ui-example/app.browserify.options.json
+++ b/examples/material-ui-example/app.browserify.options.json
@@ -3,7 +3,8 @@
     "exposify": {
       "global": true,
       "expose": {
-        "react": "React"
+        "react": "React",
+        "react/addons": "React"
       }
     }
   }
