Switch React to a browserified version

--- a/examples/material-ui-example/client/lib/app.browserify.options.json
+++ b/examples/material-ui-example/client/lib/app.browserify.options.json
@@ -1,10 +1,9 @@
 {
   "transforms": {
-    "exposify": {
+    "externalify": {
       "global": true,
-      "expose": {
-        "react": "React",
-        "react/addons": "React"
+      "external": {
+        "react": "React.require"
       }
     }
   }
