Update react-todos to browserified React

--- a/examples/react-todos/client/lib/app.browserify.options.json
+++ b/examples/react-todos/client/lib/app.browserify.options.json
@@ -1,9 +1,9 @@
 {
   "transforms": {
-    "exposify": {
+    "externalify": {
       "global": true,
-      "expose": {
-        "react": "React"
+      "external": {
+        "react": "React.require"
       }
     }
   }
