Fix indenting too far.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
 *~
 .DS_Store
+
+examples/react-todos/packages/npm-container/.npm/package/npm-shrinkwrap.json
+
+examples/react-todos/packages/npm-container/.npm/package/npm-shrinkwrap.json
+
+examples/react-todos/packages/npm-container/.npm/package/npm-shrinkwrap.json
+
+examples/react-todos/packages/npm-container/.npm/package/npm-shrinkwrap.json
+
+examples/react-todos/packages/npm-container/.npm/package/npm-shrinkwrap.json
+
+examples/react-todos/packages/npm-container/.npm/package/npm-shrinkwrap.json
+
+examples/react-todos/packages/npm-container/.npm/package/npm-shrinkwrap.json
+
+examples/react-todos/packages/npm-container/.npm/package/npm-shrinkwrap.json
