--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,4 +7,4 @@ pages:
 - JSX transpilation and ES6 features: jsx.md
 - Client NPM packages with Browserify: client-npm.md
 - React components in Meteor templates: react-template-helper.md
-- Community Meteor + React tools: react-template-helper.md
+- Community Meteor + React tools: community.md
