Add analytics file to config

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,3 +9,5 @@ pages:
 - React components in Meteor templates: react-template-helper.md
 - Setting up routing with React: routing.md
 - Community Meteor + React tools: community.md
+extra_javascript:
+- analytics.js
