--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-packages",
+  "version": "1.4.1.1",
   "description": "Meteor packages for a great React developer experience",
   "scripts": {
     "lint": "eslint . || true",
