--- a/packages/react-meteor-data/package.json
+++ b/packages/react-meteor-data/package.json
@@ -4,6 +4,7 @@
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-test-renderer": "16.8.6",
+    "@testing-library/react": "^8.0.7",
     "@testing-library/react-hooks": "1.1.0"
   }
 }
