--- a/packages/react-meteor-data/package.json
+++ b/packages/react-meteor-data/package.json
@@ -1,11 +1,15 @@
 {
   "name": "react-meteor-data",
+  "scripts": {
+    "make-types": "npx typescript *.ts --declaration --emitDeclarationOnly --outDir types"
+  },
   "dependencies": {
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-test-renderer": "16.13.1",
-    "@testing-library/react": "^10.0.2",
-    "@types/meteor": "^1.4.42",
-    "@types/react": "^16.9.34"
+    "@testing-library/react": "^11.2.2",
+    "@types/meteor": "^1.4.64",
+    "@types/react": "^17.0.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-test-renderer": "17.0.1",
+    "typescript": "^4.1.2"
   }
 }
