--- a/packages/react-meteor-data/package.json
+++ b/packages/react-meteor-data/package.json
@@ -1,11 +1,12 @@
 {
   "name": "react-meteor-data",
   "dependencies": {
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-test-renderer": "16.13.1",
     "@testing-library/react": "^10.0.2",
     "@types/meteor": "^1.4.66",
-    "@types/react": "^16.9.34"
+    "@types/react": "^16.9.34",
+    "fast-deep-equal": "^3.1.3",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-test-renderer": "16.13.1"
   }
 }
