--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   },
   "homepage": "https://github.com/meteor/react-packages#readme",
   "dependencies": {
-    "eslint": "^6.0.1",
-    "eslint-plugin-react": "^7.14.2",
-    "eslint-config-airbnb": "^17.1.1"
+    "eslint": "^7.26.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.23.2"
   },
   "eslintConfig": {
     "extends": "airbnb"
