--- a/packages/react-meteor-data/package.json
+++ b/packages/react-meteor-data/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-meteor-data",
-  "dependencies": {
+  "devDependencies": {
     "@testing-library/react": "^10.4.9",
     "@types/meteor": "^1.4.70",
     "@types/react": "^16.14.6",
