--- a/packages/react-meteor-accounts/package.json
+++ b/packages/react-meteor-accounts/package.json
@@ -5,6 +5,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^10.0.2",
+    "@testing-library/react-hooks": "^7.0.2",
     "@types/meteor": "^1.4.42",
     "@types/react": "^16.9.34",
     "react": "16.13.1",
