--- a/packages/react-meteor-accounts/package.json
+++ b/packages/react-meteor-accounts/package.json
@@ -1,11 +1,12 @@
 {
   "name": "meteor-react-accounts",
   "scripts": {
-    "make-types": "npx typescript *.tsx --jsx preserve --declaration --emitDeclarationOnly --esModuleInterop --outDir types"
+    "make-types": "npx typescript react-accounts.tsx --jsx preserve --declaration --emitDeclarationOnly --esModuleInterop --outDir types --strict"
   },
   "devDependencies": {
     "@testing-library/react": "^10.0.2",
     "@testing-library/react-hooks": "^7.0.2",
+    "@tsconfig/recommended": "^1.0.1",
     "@types/meteor": "^1.4.42",
     "@types/react": "^16.9.34",
     "react": "16.13.1",
