--- a/packages/react-meteor-data/package.json
+++ b/packages/react-meteor-data/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-meteor-data",
-  "devDependencies": {
+  "dependencies": {
     "@testing-library/react": "^12.0.0",
     "@types/meteor": "^1.4.76",
     "@types/react": "^17.0.16",
