--- a/packages/react-meteor-data/package.json
+++ b/packages/react-meteor-data/package.json
@@ -7,6 +7,12 @@
     "fast-deep-equal": "^3.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-test-renderer": "17.0.2"
+    "react-test-renderer": "17.0.2",
+    "lodash.isequal": "^4.5.0",
+    "lodash.remove": "^4.7.0"
+  },
+  "devDependencies": {
+    "@types/lodash.isequal" : "^4.5.4",
+    "@types/lodash.remove" : "^4.7.5"
   }
 }
